[package]
edition      = "2021"
name         = "watering-system"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "watering-system"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32",
  "log-04",
  "unstable",
] }
log = { version = "0.4.27", features = ["max_level_debug"] }
defmt-rtt = "1.0.0"

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
  "multicast",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-nal-async = "0.8.0"

esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.15.0", features = ["esp32", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "log",
  "task-arena-size-32768",
] }
embassy-time = { version = "0.4.0", features = ["log"] }
embassy-sync = { version = "0.7.2" }
esp-hal-embassy = { version = "0.9.0", features = ["esp32", "log-04"] }
esp-hal-mdns = "0.1.2"
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32",
  "log-04",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = "2.1.1"
heapless = "0.9.1"
rust-mqtt = { version = "0.3.0", default-features = false, features = ["no_std"] }

# Sensors
embedded-dht-rs = { version = "0.5.0", features = ["dht22"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
